fixing text align in results

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -167,6 +167,7 @@ input {
 
 #toplangschart {
     font-family: $font-1;
+    text-align: left;
 }
 
 .section {
